fixed element alignment

--- a/src/app/formations/formations.component.scss
+++ b/src/app/formations/formations.component.scss
@@ -1,4 +1,4 @@
-.formation-container {
+.formation-container{
   display: grid;
   grid-template-columns: 50% 50%;
   grid-template-rows: auto;
@@ -12,6 +12,7 @@
     display: flex;
     align-items: center;
     align-content: center;
+    justify-content: center;
     flex-wrap: wrap;
   }
 }
